--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'androidx.navigation.safeargs.kotlin'
-
 }
 
 android {
@@ -14,7 +13,6 @@ android {
         targetSdk 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
 
@@ -27,8 +25,6 @@ android {
         }
     }
     compileOptions {
-
-
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -61,9 +57,8 @@ dependencies {
    // implementation 'com.github.kizitonwose:CalendarView:1.0.4'
     implementation 'com.applandeo:material-calendar-view:1.7.0'
 
-    /* implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+    //implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 
-     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'*/
 
     //for Screen Size
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
