--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.clinicapp.moclinic" >
+    package="com.clinicapp.moclinic">
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MOClinic" >
+        android:theme="@style/Theme.MOClinic">
+        <activity
+            android:name=".ui.fragments.prescription.PrescriptionActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.activities.main.MainActivity"
             android:exported="true" />
         <activity
             android:name=".ui.activities.first.FirstActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
